@startuml exercicio
package  ultraemojicombat <<folder>>{

    class Lutador{
        //conflito 2.1
        //conflito 2
        - nome: String
        - nacionalidade: String
        - idade: int   
        - peso: float 
        - altura: float 
        - categoria: String
        - vitorias: int   
        - derrotas: int   
        - empates: int   

        + status()
        + ganlharLuta()
        + perderLuta()
        + empatarLuta()    
    }
    class Luta{
        - rounds: final int
        - aprovada: boolean
        - nome:String
        + void imprimirLuta()
        + void marcaLuta()
        + void lutar()
    }
    class Enpresa{
        - Atuacao: String
        - CNPJ:  String
        - Nome: String
        - NaturezaJuridica: String
        //outro comentario
        //ramificacao da ramificacao
    }
    class Evento{
        //nao lembro se e asim que comenta 

        - Lutas[ ]: Luta
        - diaInicio: Calendar
        - diaFim:Calendar
        - Endereço:String
        - static lutadore[] :lutador
        + void apresentarLutadores()
        + void imprimirEvento()
        + void apresentarLutadores()
    }
    Evento *-- Luta: lutas
    Luta o-- Lutador: desafiado
    Luta o-- Lutador: desafiante
    Enpresa "n" <-- "n" Lutador :patrocinio
    Enpresa "n" <-- "n" Evento  :patrocinio
}
@enduml
